k8s/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: '50m'
spec:
  rules:
    - host: api.lincolms.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80

    - host: prisma.lincolms.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prisma-service
                port:
                  number: 5555
